# text-classifier

./: README.md  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md  text_classifier-checkpoint.ipynb
